--- a/components/infoDialog/infoDialog.wxss
+++ b/components/infoDialog/infoDialog.wxss
@@ -6,7 +6,7 @@
   top: 0;
   overflow-x: hidden;
   overflow-y: auto;
-  background: #fcf7ee;
+  background: #fdf9f4;
   z-index: 999;
 }
 .infoDialog-content {
