--- a/pages/submit/submit.wxss
+++ b/pages/submit/submit.wxss
@@ -11,6 +11,7 @@
 }
 .submitInfo {
   padding: 20px;
+  padding-bottom: 50px;
 }
 .submit-form {
   padding: 20px;
@@ -38,8 +39,18 @@
 }
 .submit-btns {
   display: flex;
+  flex-wrap: wrap;
   gap: 20px;
   margin-top: 10px;
+}
+.submit-tags {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin-top: 10px;
+}
+.submit-tags .submit-radio {
+  flex: none;
 }
 .submit-radio {
   flex: 1;
@@ -63,4 +74,13 @@
 .submit-radio.none.active {
   background-image: linear-gradient(90deg, #a8e039, #38eb38e8);
   color: #fff;
+}
+.submit-add {
+  background-image: linear-gradient(90deg, #cbe794, #c9eb86);
+  color: #fff;
+}
+.submit-btn {
+  background-image: linear-gradient(90deg, #94c0e7, #70b0e9);
+  color: #fff;
+  padding: 12px 0;
 }
