--- a/pages/submitBySteps/submitBySteps.wxml
+++ b/pages/submitBySteps/submitBySteps.wxml
@@ -1,35 +1,174 @@
 <view class="submitBySetps">
   <view class="submitB-container">
     <view class="submitB-header" wx:if="{{currentStep!==0}}">
-      <view class="setp-show">
-        <view class="setp-item active"> 信息</view>
-        <view class="setp-item"> 情况</view>
-        <view class="setp-item"> 完成</view>
-      </view>
-    </view>
-    <view class="submitB-body">
-      <view class="step1">
-        <view class="step-h"> 123 </view>
-        <view class="step1-box active">
-          <view class="step1-box-c box1">
-            <text class="icon">
-              <view class="svg">1</view>
-            </text>
-          </view>
-          <view class="step1-box-c box2">
-            <text class="icon">
-              <view class="svg">1</view>
-            </text>
-          </view>
-          <view class="step1-box-c box3"
-            ><text class="icon">
-              <view class="svg">1</view>
-            </text>
-          </view>
-          <view class="step1-box-c box4"></view>
+      <view class="setp-show" style="--step-width:{{}}">
+        <view
+          class="setp-item {{currentStep==1?'active':''}}"
+          data-step="1"
+          bindtap="changeStep"
+        >
+          信息
+        </view>
+        <view
+          class="setp-item {{currentStep==2?'active':''}}"
+          data-step="2"
+          bindtap="changeStep"
+        >
+          情况
+        </view>
+        <view
+          class="setp-item {{currentStep==3?'active':''}}"
+          data-step="3"
+          bindtap="changeStep"
+        >
+          完成
         </view>
       </view>
     </view>
-    <view class="submitB-footer"> </view>
+
+    <view class="submitB-body">
+      <view
+        class="{{currentStep==0?'stepActive':''}} step step0"
+        wx:if="{{currentStep==0}}"
+      >
+        <view class="step-h">
+          <text>
+            登记猫猫狗狗，\n让你能更好记录生活\n并且给社会带来更多好处
+          </text>
+        </view>
+        <view class="step0-box {{isShowStep0 ? 'active':''}}">
+          <view class="step0-box-c box1">
+            <text>居民健康</text>
+          </view>
+          <view class="step0-box-c box2">
+            <text>社区安全</text>
+          </view>
+          <view class="step0-box-c box3">
+            <text>人宠和谐 </text>
+          </view>
+        </view>
+      </view>
+
+      <view
+        class="{{currentStep==1?'stepActive':''}} step step1"
+        wx:if="{{currentStep==1}}"
+      >
+        <view class="submitBInfo">
+          <view class="submitB-form">
+            <text>昵称</text>
+            <input
+              type="text"
+              placeholder="猫猫狗狗昵称"
+              value="{{formData.name}}"
+            />
+          </view>
+
+          <view class="submitB-form">
+            <text>种类</text>
+            <view class="submitB-btns">
+              <view
+                class="submitB-radio p {{formData.type===1?'active':''}}"
+                bindtap="chooseType"
+                data-type="1"
+              >
+                猫猫
+              </view>
+              <view
+                class="submitB-radio b {{formData.type===2?'active':''}}"
+                bindtap="chooseType"
+                data-type="2"
+              >
+                狗狗
+              </view>
+            </view>
+          </view>
+
+          <!-- <view class="submitB-form"> -->
+            <!-- <text>标签</text> -->
+            <!-- <view class="submitB-tags"> -->
+              <!-- <view -->
+                <!-- wx:for="{{tagList}}" -->
+                <!-- wx:key="item" -->
+                <!-- class="submiBt-radio man {{item.status?'active':''}}" -->
+                <!-- bindtap="chooseTag" -->
+                <!-- data-tag="{{index}}" -->
+                <!-- style="width:{{tagItemWidth}}px" -->
+              <!-- > -->
+                <!-- {{item.value}} -->
+              <!-- </view> -->
+<!--  -->
+              <!-- <view -->
+                <!-- class="submitB-radio submitB-add" -->
+                <!-- bindtap="dialogActive" -->
+                <!-- style="width:{{tagItemWidth}}px" -->
+              <!-- > -->
+                <!-- 添加 + -->
+              <!-- </view> -->
+            <!-- </view> -->
+          <!-- </view> -->
+        </view>
+      </view>
+
+      <view
+        class="{{currentStep==2?'stepActive':''}} step step2"
+        wx:if="{{currentStep==2}}"
+        >
+        
+         <view class="submitBInfo">
+          <view class="submitB-form">
+            <text>发现地点</text>
+            <input
+              type="text"
+              placeholder="发现的地点"
+              value="{{formData.name}}"
+            />
+          </view>
+
+          <view class="submitB-form">
+            <text>健康状态</text>
+            <view class="submitB-btns">
+              <view
+                class="submitB-radio p {{formData.status===1?'active':''}}"
+                bindtap="chooseStatus"
+                data-status="1"
+              >
+                健康
+              </view>
+              <view
+                class="submitB-radio b {{formData.status===0?'active':''}}"
+                bindtap="chooseStatus"
+                data-status="0"
+              >
+                生病
+              </view>
+              <view
+                class="submitB-radio g {{formData.status===-1?'active':''}}"
+                bindtap="chooseStatus"
+                data-status="-1"
+              >
+                未知
+              </view>
+            </view>
+          </view>
+ <view class="submitB-form">
+        <text>图片</text>
+        <upload-pic> </upload-pic>
+      </view>
+      
+        </view>
+      </view>
+
+      <view
+        class="{{currentStep==3?'stepActive':''}} step step3"
+        wx:if="{{currentStep==3}}"
+        >123312
+      </view>
+    </view>
+
+    <view class="submitB-footer">
+      <view class="nextStep" bindtap="nextStep"
+        >{{ currentStep==3?'完成':'下一步'}}
+      </view>
+    </view>
   </view>
 </view>
