--- a/pages/submitBySteps/submitBySteps.wxss
+++ b/pages/submitBySteps/submitBySteps.wxss
@@ -4,13 +4,25 @@
   background: #f4f5fa;
 }
 .submitB-container {
+  position: relative;
   display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
 }
 .submitB-header {
   height: 50px;
   width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
   display: flex;
   justify-content: center;
+}
+.submitB-body {
+  top: 50px;
+  width: 100%;
+  position: absolute;
 }
 .setp-show {
   --radius: 18px;
@@ -33,53 +45,38 @@
   padding: 0.2rem 0;
   color: rgb(71, 86, 108);
   font-weight: 600;
-  transition: all 0.15s ease-in-out;
+  transition: 0.25s all cubic-bezier(0.42, 0, 0.68, 1.35);
 }
 .setp-item.active {
   background-color: #fff;
   color: #5868e5;
 }
-.step1 {
-  height: 100vh;
-  width: 100vw;
-  
+.step-h {
+  text-align: center;
+  font-weight: 600;
+  font-size: 1.2em;
+  padding-top: 3em;
 }
-.step1-box {
+.step {
+  display: none;
+  transition: 0.25s all cubic-bezier(0.42, 0, 0.68, 1.35);
+}
+.step.stepActive {
+  display: block;
+}
+.step0 {
+  height: calc(80vh - 50px);
+  width: 100vw;
+}
+.step0-box {
   position: relative;
-  margin-top: 30%;
   width: 100%;
   height: 300px;
   border-radius: 30px;
   transition: all 1s ease-in-out;
 }
 
-.logo {
-  position: absolute;
-  right: 50%;
-  bottom: 50%;
-  transform: translate(50%, 50%);
-  transition: all 0.6s ease-in-out;
-}
-
-.logo .logo-svg {
-  fill: white;
-  width: 30px;
-  height: 30px;
-}
-
-.icon {
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-}
-
-.icon .svg {
-  fill: rgba(255, 255, 255, 0.797);
-  width: 100%;
-  transition: all 0.5s ease-in-out;
-}
-
-.step1-box-c{
+.step0-box-c {
   position: absolute;
   padding: 10px;
   text-align: right;
@@ -89,43 +86,42 @@
   border-radius: 100% 29% 51% 10%/10% 23% 75% 1%;
   transform-origin: bottom left;
   transition: all 1s ease-in-out;
-  
 }
-
+.step0-box-c text {
+  font-weight: 600;
+  color: #fff;
+  padding: 1em;
+  margin-top: 1.3em;
+}
 .box::before {
   content: "";
   position: absolute;
   inset: 0;
   border-radius: inherit;
-  opacity: 0;
   transition: all 0.5s ease-in-out;
 }
-
-.box.active .svg {
-  fill: white;
-}
-
 .box1 {
   width: 70%;
   height: 70%;
   bottom: -70%;
   left: -70%;
-  background: radial-gradient(circle at 100% 107%, #fda0d5e2 0%, #9cb8ec 30%, #00ffee 60%, #62c2fe 100%);
-
+  background: radial-gradient(
+    circle at 100% 107%,
+    #fda0d5e2 0%,
+    #9cb8ec 30%,
+    #00ffee 60%,
+    #62c2fe 100%
+  );
 }
-
 .box1::before {
-  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #ff53d4 60%, #62c2fe 90%);
+  background: radial-gradient(
+    circle at 30% 107%,
+    #fdf497 0%,
+    #fdf497 5%,
+    #ff53d4 60%,
+    #62c2fe 90%
+  );
 }
-
-.box1.active::before {
-  opacity: 1;
-}
-
-.box1.active .icon .svg {
-  filter: drop-shadow(0 0 5px white);
-}
-
 .box2 {
   width: 50%;
   height: 50%;
@@ -133,19 +129,9 @@
   left: -50%;
   transition-delay: 0.2s;
 }
-
 .box2::before {
   background: radial-gradient(circle at 30% 107%, #adebfbe4 0%, #33b7ebe4 90%);
 }
-
-.box2.active::before {
-  opacity: 1;
-}
-
-.box2.active .icon .svg {
-  filter: drop-shadow(0 0 5px white);
-}
-
 .box3 {
   width: 30%;
   height: 30%;
@@ -153,19 +139,9 @@
   left: -30%;
   transition-delay: 0.4s;
 }
-
 .box3::before {
   background: radial-gradient(circle at 30% 107%, #b7bcf6 0%, #cb8ff6e4 90%);
 }
-
-.box3.active::before {
-  opacity: 1;
-}
-
-.box3.active .icon .svg {
-  filter: drop-shadow(0 0 5px white);
-}
-
 .box4 {
   width: 10%;
   height: 10%;
@@ -173,18 +149,105 @@
   left: -10%;
   transition-delay: 0.6s;
 }
-
-.step1-box.active {
+.step0-box.active {
   transform: scale(1.1);
 }
-
-.step1-box.active .step1-box-c{
+.step0-box.active .step0-box-c {
   bottom: -1px;
   left: -1px;
 }
+.nextStep {
+  width: 60%;
+  margin: auto;
+  padding: 10px 5px;
+  font-size: 0.9em;
+  background-image: linear-gradient(90deg, #cbe794, #c9eb86);
+  text-align: center;
+  color: #ffffff;
+  font-weight: 600;
+  border-radius: 19px;
+  transition: 0.25s all cubic-bezier(0.42, 0, 0.68, 1.35);
+}
+.submitB-footer {
+  position: fixed;
+  width: 100%;
+  bottom: 30px;
+}
+.submitBInfo {
+  width: calc(100% - 40px);
+  padding: 20px;
+  padding-bottom: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.submitB-form {
+  padding: 20px;
+  width: 80%;
+}
 
-.step1-box.active .logo {
-  transform: translate(0, 0);
-  bottom: 20px;
-  right: 20px;
+.submitB-form > text {
+  font-weight: 600;
+  font-size: 1em;
+  display: flex;
+  gap: 8px;
+  align-items: center;
+  padding: 10px 0;
+}
+.submitB-form > text::before {
+  content: "";
+  display: block;
+  border-radius: 50%;
+  height: 0.3em;
+  width: 0.3em;
+  border: 3px solid #4159e7;
+}
+.submitB-form input {
+  font-weight: 600;
+  padding: 10px;
+  height: 2em;
+  margin: auto;
+  text-align: center;
+  border-bottom: 1px solid #d7dee9;
+}
+.submitB-btns {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-top: 10px;
+}
+
+.submitB-tags {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin-top: 10px;
+}
+.submitB-tags .submitB-radio {
+  flex: none;
+}
+.submitB-radio {
+  flex: 1;
+  width: 100%;
+  padding: 10px 5px;
+  font-size: 1em;
+  background: #e9ecf0;
+  text-align: center;
+  color: #cdcfdde7;
+  font-weight: 600;
+  border-radius: 19px;
+}
+
+.submitB-radio.b.active {
+  background-image: linear-gradient(90deg, #5468eb, #8289f9);
+  color: #fff;
+}
+.submitB-radio.p.active {
+  background-image: linear-gradient(90deg, #ec69c1, #f58ee0e8);
+  color: #fff;
+}
+.submitB-radio.g.active {
+  background-image: linear-gradient(90deg, #94c0e7, #70b0e9);
+  color: #fff;
 }
