--- a/components/dialog/dialog.wxss
+++ b/components/dialog/dialog.wxss
@@ -1,52 +1,62 @@
 .dialog {
-  --lo-dialog-radius: 18px;
-  --lo-dialog-padding-a: 18px;
-  height: 100vh;
-  width: 100vw;
-  position: fixed;
-  left: 0;
-  top: 0;
-  z-index: 999;
-  background: rgba(0, 0, 0, 0.3);
+	--lo-dialog-radius: 18px;
+	--lo-dialog-padding-a: 18px;
+	height: 100vh;
+	width: 100vw;
+	position: fixed;
+	left: 0;
+	top: 0;
+	z-index: 999;
+	background: rgba(0, 0, 0, 0.3);
 }
 .dialog > view {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+	height: 100%;
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 .dialog-container {
-  width: 70%;
-  padding: 30px 20px 20px 20px;
-  border-radius: var(--lo-dialog-radius);
-  overflow: hidden;
-  background: #fff;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
+	width: 70%;
+	padding: 30px 20px 20px 20px;
+	border-radius: var(--lo-dialog-radius);
+	overflow: hidden;
+	background: #fff;
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+	animation: popup .3s ease-in-out;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+@keyframes popup {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
 }
 .dialog-header {
-  font-weight: 600;
-  font-size: 1.2em;
-  padding: 15px 10px 10px 10px; 
-  text-align: center;
+	font-weight: 600;
+	font-size: 1.2em;
+	padding: 15px 10px 10px 10px;
+	text-align: center;
 }
-.dialog-body{
-    padding: 10px 0;
-    text-align: center;
+.dialog-body {
+	padding: 10px 0;
+	text-align: center;
 }
 .dialog-footer {
-  margin-top: auto;
+	margin-top: auto;
 }
 .dialog-btn {
-  margin: auto;
-  width: 50%;
-  padding: 10px 5px;
-  font-size: 0.9em;
-  background: #3d8bea;
-  text-align: center;
-  font-weight: 600;
-  color: #fff;
-  border-radius: 10px;
+	margin: auto;
+	width: 50%;
+	padding: 10px 5px;
+	font-size: 0.9em;
+	background: #3d8bea;
+	text-align: center;
+	font-weight: 600;
+	color: #fff;
+	border-radius: 10px;
 }
