--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -1,193 +1,197 @@
-@import "../user/iconfont.wxss";
 .detail {
-  height: 100vh;
+	height: 100vh;
 }
 .detail-content {
-  overflow: auto;
-  background: #f3f4f8;
+	overflow: auto;
+	background: #f3f4f8;
 }
 .detail-card {
-  background: #fff;
-  width: 90%;
-  margin: auto;
-  border-radius: 13px;
-  padding: 10px;
+	background: #fff;
+	width: 90%;
+	margin: auto;
+	border-radius: 13px;
+	padding: 10px;
 }
 .detail-info {
-  margin-top: -39px;
-  z-index: 10;
-  position: relative;
+	margin-top: -39px;
+	z-index: 10;
+	position: relative;
 }
 .detail-pic {
-  width: 100%;
-  z-index: 1;
-}
-.detail-pic image {
-  width: 100%;
-  height: 288px;
+	z-index: 1;
+	width: 100%;
+	height: 288px;
 }
 .detail-title-layout {
-  display: flex;
-  align-items: center;
+	display: flex;
+	align-items: center;
 }
 .detail-title {
-  font-size: 1.2em;
-  font-weight: 600;
-  padding: 10px;
+	font-size: 1.2em;
+	font-weight: 600;
+	padding: 10px;
 }
 
 .detail-shortInfo {
-  padding: 10px;
+	padding: 10px;
 }
 .detail-shortInfo-list {
-  display: flex;
-  flex-wrap: wrap;
+	display: flex;
+	flex-wrap: wrap;
 }
 .detail-shortInfo-item {
-  display: flex;
-  flex-direction: column;
-  font-size: 13px;
-  color: #676767d9;
-  width: 50%;
-  padding: 10px 0;
+	display: flex;
+	flex-direction: column;
+	font-size: 13px;
+	color: #676767d9;
+	width: 50%;
+	padding: 10px 0;
 }
 .detail-shortInfo-item > text {
-  display: block;
-  font-size: 16px;
-  padding: 3px 0;
-  color: #1d1d1f;
+	display: block;
+	font-size: 16px;
+	padding: 3px 0;
+	color: #1d1d1f;
 }
 .divLine {
-  background: #e2e2e2e4;
-  width: 96%;
-  margin: 10px auto;
-  height: 1px;
+	background: #e2e2e2e4;
+	width: 96%;
+	margin: 10px auto;
+	height: 1px;
 }
 .detail-publisher {
-  display: flex;
-  align-items: center;
-  margin-left: 2%;
+	display: flex;
+	align-items: center;
+	margin-left: 2%;
 }
 .detail-publisher > image {
-  height: 2em;
-  width: 2em;
-  border-radius: 50%;
+	height: 2em;
+	width: 2em;
+	border-radius: 50%;
+	margin: 0 3px;
 }
 .detail-publisher > text {
-  font-size: 0.8em;
-  color: #666565;
-  font-weight: 600;
+	font-size: 0.8em;
+	color: #666565;
+	font-weight: 600;
 }
 .detail-publisher > view {
-  font-weight: 600;
-  font-size: 1em;
-  padding: 0 2px;
+	font-weight: 600;
+	font-size: 1em;
+	padding: 0 2px;
 }
 .detail-function {
-  display: flex;
-  padding: 5px 0;
+	display: flex;
+	padding: 5px 0;
 }
 
 .detail-btns {
-  display: flex;
-  align-items: center;
-  margin-left: auto;
-  margin-right: 3%;
-  gap: 8px;
+	display: flex;
+	align-items: center;
+	margin-left: auto;
+	margin-right: 3%;
+	gap: 8px;
 }
 .detail-comment {
-  margin-top: 16px;
+	margin-top: 16px;
 }
 .detail-comment-send {
-  margin: auto;
-  margin-top: 16px;
-  padding: 16px 10px;
-  background: #fff;
-  color: #9e9e9e;
-  font-size: 15px;
-  width: 88%;
-  border-radius: 22px;
-  display: flex;
+	margin: auto;
+	margin-top: 16px;
+	padding: 16px 10px;
+	background: #fff;
+	color: #9e9e9e;
+	font-size: 15px;
+	width: 88%;
+	border-radius: 22px;
+	display: flex;
 }
 
 .detail-comment-send > text {
-  padding: 5px 20px;
+	padding: 5px 20px;
 }
 .detail-comment-send .iconfont {
-  padding: 5px 0 5px 20px;
-  color: #9e9e9e;
+	padding: 5px 0 5px 20px;
+	color: #9e9e9e;
 }
 
 .detail-comment-list {
-  margin-top: 18px;
-  display: flex;
-  flex-direction: column;
+	margin-top: 18px;
+	display: flex;
+	flex-direction: column;
 }
 .detail-comment-item {
-  margin-bottom: 20px;
+	margin-bottom: 20px;
 }
 .detail-comment-item-t {
-  padding: 6px;
-  display: flex;
-  align-items: center;
+	padding: 6px;
+	display: flex;
+	align-items: center;
 }
 .detail-comment-item-t > image {
-  height: 60px;
-  width: 60px;
-  border-radius: 50%;
-  margin-right: 3px;
+	height: 60px;
+	width: 60px;
+	border-radius: 50%;
+	margin-right: 3px;
 }
 .detail-comment-t-user > view {
-  font-size: 1em;
-  font-weight: 600;
+	font-size: 1em;
+	font-weight: 600;
 }
 .detail-comment-t-user > text {
-  font-size: 0.8em;
-  color: #676767d9;
+	font-size: 0.8em;
+	color: #676767d9;
 }
 .detail-comment-item-b {
-  padding: 0 20px;
+	padding: 0 20px;
 }
 .detail-comment-b-text {
-  width: 90%;
-  word-break: break-all;
-  padding-bottom: 8px;
+	width: 90%;
+	word-break: break-all;
+	padding-bottom: 8px;
 }
 .detail-comment-b-pic {
-  display: flex;
-  gap: 6px;
+	display: flex;
+	gap: 6px;
 }
 
 .detail-comment-b-pic view {
-  margin-top: 10px;
-  width: 33%;
-  padding-top: 30%;
-  height: 0;
-  position: relative;
+	margin-top: 10px;
+	width: 33%;
+	padding-top: 30%;
+	height: 0;
+	position: relative;
 }
 .detail-comment-b-pic image {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: 1;
-  object-fit: cover;
-  border-radius: 8px;
-  box-shadow: 0px 0.5px 0.5px #efefef, 0px 1px 0.5px rgba(239, 239, 239, 0.5);
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	z-index: 1;
+	object-fit: cover;
+	border-radius: 8px;
+	box-shadow: 0px 0.5px 0.5px #efefef, 0px 1px 0.5px rgba(239, 239, 239, 0.5);
 }
 .comment-item-fun {
-  padding: 5px 0 5px 20px;
-  color: #666565;
-  display: flex;
+	padding: 5px 0 5px 20px;
+	color: #666565;
+	display: flex;
 }
-.comment-item-fun >view{
-  margin: 5px 26px 0 auto;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 6px;
+.comment-item-fun > view {
+	margin: 5px 26px 0 auto;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 8px;
 }
+.detail-btns .iconfont,
 .comment-item-fun .iconfont {
-  color: #8c8c8c;
+	color: #8c8c8c;
+	display: flex;
+	align-items: center;
+	gap: 2px;
+}
+.iconfont text {
+	font-size: 0.76em;
 }
